--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.4",
     "@google/genai": "^1.39.0",
     "react-markdown": "^10.1.0",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.563.0",
+    "mp4box": "0.5.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
